# nmea-parser

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mid-to-iso3166.py  rustfmt.toml
.github/workflows/: ci.yml
src/: ais_vdm_t18.rs  ais_vdm_t19.rs  ais_vdm_t1t2t3.rs  ais_vdm_t21.rs  ais_vdm_t24.rs  ais_vdm_t5.rs  error.rs  gnss_gga.rs  gnss_gll.rs  gnss_gsa.rs  gnss_gsv.rs  gnss_rmc.rs  gnss_vtg.rs  json_date_time_utc.rs  json_fixed_offset.rs  lib.rs  types.rs  util.rs
src/ais/: mod.rs  vdm_t10.rs  vdm_t11.rs  vdm_t12.rs  vdm_t13.rs  vdm_t14.rs  vdm_t15.rs  vdm_t16.rs  vdm_t17.rs  vdm_t18.rs  vdm_t19.rs  vdm_t1t2t3.rs  vdm_t20.rs  vdm_t21.rs  vdm_t22.rs  vdm_t23.rs  vdm_t24.rs  vdm_t25.rs  vdm_t26.rs  vdm_t27.rs  vdm_t4.rs  vdm_t5.rs  vdm_t6.rs  vdm_t7.rs  vdm_t9.rs
src/boat/: dpt.rs  mod.rs
src/gnss/: alm.rs  dbs.rs  dpt.rs  dtm.rs  gga.rs  gll.rs  gns.rs  gsa.rs  gsv.rs  hdt.rs  mod.rs  mss.rs  mtw.rs  mwv.rs  rmc.rs  stn.rs  vbw.rs  vhw.rs  vtg.rs  zda.rs
