[package]
name = "nmea-parser"
version = "0.11.0-dev"
publish = false
description = "NMEA 0183 parser for AIS and GNSS sentences"
authors = ["Timo Saarinen <zaari@mailbox.org>"]
license = "Apache-2.0"
repository = "https://github.com/zaari/nmea-parser"
documentation = "https://docs.rs/nmea-parser"
keywords = ["nmea", "ais", "gnss", "gps", "no_std"]
categories = ["parsing"]
readme = "README.md"
edition = "2018"
rust-version  = "1.56"

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2.15", default-features = false }
chrono = { version = "0.4.26", default-features = false, features = ["alloc"] }
log = "0.4.17"
hashbrown = "0.12.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert = "0.7.4"
