[package]
name = "nmea-parser"
version = "0.11.0"
publish = true
description = "NMEA 0183 parser for AIS and GNSS sentences"
authors = ["Timo Saarinen <zaari@mailbox.org>"]
license = "Apache-2.0"
repository = "https://github.com/zaari/nmea-parser"
documentation = "https://docs.rs/nmea-parser"
keywords = ["nmea", "ais", "gnss", "gps", "no_std"]
categories = ["parsing"]
readme = "README.md"
edition = "2018"

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2.17", default-features = false }
chrono = { version = "0.4.31", default-features = false, features = ["alloc"] }
log = "0.4.20"
hashbrown = "0.14.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert = "0.7.4"
